2011-12-02  Lucas Forschler  <lforschler@apple.com>

    Merge 90959

    2011-07-13  Simon Fraser  <simon.fraser@apple.com>

            Fix non-debug builds.

            * rendering/RenderLayerBacking.cpp:
            (WebCore::RenderLayerBacking::createGraphicsLayer):

2011-12-02  Lucas Forschler  <lforschler@apple.com>

    Merge 93445

    2011-08-19  Beth Dakin  <bdakin@apple.com>

            https://bugs.webkit.org/show_bug.cgi?id=66590
            Re-name scrollbar painter types

            Reviewed by Sam Weinig.

            Names changed to remove references to WebKitSystemInterface since the 
            implementation is now in WebCore. And the type names changed to be more Objective-
            Cish instead of C++ish
            WTF_USE_WK_SCROLLBAR_PAINTER -> WTF_USE_SCROLLBAR_PAINTER
            WKScrollbarPainterRef -> ScrollbarPainter
            WKScrollbarPainterControllerRef -> ScrollbarPainterController

            * platform/mac/NSScrollerImpDetails.h:
            * platform/mac/ScrollAnimatorMac.h:
            * platform/mac/ScrollAnimatorMac.mm:
            (-[ScrollbarPartAnimation initWithScrollbarPainter:part:WebCore::scrollAnimator:WebCore::animateAlphaTo:duration:]):
            (-[ScrollbarPainterDelegate setUpAnimation:scrollerPainter:part:WebCore::animateAlphaTo:duration:]):
            (-[ScrollbarPainterDelegate scrollerImp:animateKnobAlphaTo:duration:]):
            (-[ScrollbarPainterDelegate scrollerImp:animateTrackAlphaTo:duration:]):
            (WebCore::ScrollAnimatorMac::ScrollAnimatorMac):
            (WebCore::ScrollAnimatorMac::~ScrollAnimatorMac):
            (WebCore::ScrollAnimatorMac::notifyPositionChanged):
            (WebCore::ScrollAnimatorMac::contentAreaWillPaint):
            (WebCore::ScrollAnimatorMac::mouseEnteredContentArea):
            (WebCore::ScrollAnimatorMac::mouseExitedContentArea):
            (WebCore::ScrollAnimatorMac::mouseMovedInContentArea):